--- a/src/static/main.html
+++ b/src/static/main.html
@@ -16,8 +16,11 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-12 py-2">
-            <button id="tool-uuid" type="button" class="btn btn-outline-primary sanduk-tool-btn">UUID</button>
+        <div class="col-6 py-2">
+            <button id="tool-uuid-v4" type="button" class="btn btn-outline-primary sanduk-tool-btn">UUID V4</button>
+        </div>
+        <div class="col-6 py-2">
+            <button id="tool-uuid-v5" type="button" class="btn btn-outline-primary sanduk-tool-btn">UUID V5</button>
         </div>
     </div>
     <div class="row">
