jwt decode added

--- a/src/static/main.html
+++ b/src/static/main.html
@@ -24,6 +24,13 @@
       <button class="btn btn-lg sanduk-tool-btn" id="open-uuid-v5-browser-window-btn" type="button">UUID v5</button>
     </div>
   </div>
+  <div class="row">
+    <div class="col-12 p-5">
+      <button class="btn btn-lg sanduk-tool-btn" id="open-jwt-decoder-browser-window-btn" type="button">JSON Web Token
+        Decoder
+      </button>
+    </div>
+  </div>
 </div>
 <script src="../renderer-process/app.js"></script>
 </body>
