base64 encode, base64 decode added

--- a/src/static/main.html
+++ b/src/static/main.html
@@ -31,6 +31,14 @@
       </button>
     </div>
   </div>
+  <div class="row">
+    <div class="col-6 p-5">
+      <button class="btn btn-lg sanduk-tool-btn" id="open-base64-encode-browser-window-btn" type="button">Base64 Encode</button>
+    </div>
+    <div class="col-6 p-5">
+      <button class="btn btn-lg sanduk-tool-btn" id="open-base64-decode-browser-window-btn" type="button">Base64 Decode</button>
+    </div>
+  </div>
 </div>
 <script src="../renderer-process/app.js"></script>
 </body>
