--- a/src/static/jwt-decoder.html
+++ b/src/static/jwt-decoder.html
@@ -22,7 +22,9 @@
           overflow-y: scroll;
           -webkit-user-select: text;
           height: max-content;
+          min-height: 100px;
           max-height: 400px;
+          padding: 5px 5px 10px 5px;
       }
   </style>
 </head>
