refactor, created base64 encoder decoder

--- a/src/static/jwt-decoder.html
+++ b/src/static/jwt-decoder.html
@@ -15,6 +15,7 @@
 
       textarea.sanduk-jwt-container {
           resize: none;
+          font-size: 1.2em;
       }
 
       #jwt-decoded-header,
@@ -25,13 +26,15 @@
           min-height: 100px;
           max-height: 400px;
           padding: 5px 5px 10px 5px;
+          margin: 0;
+          font-size: 1.2em;
       }
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-20">
+<div class="container p-10">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 text-center">
       <h4>JSON Web Token Decoder</h4>
     </div>
   </div>
