--- a/src/static/main.html
+++ b/src/static/main.html
@@ -15,7 +15,8 @@
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-20">
+<div class="container p-10">
+  <!-- UUID -->
   <div class="row">
     <div class="col-6 p-5">
       <button class="btn btn-lg sanduk-tool-btn" id="open-uuid-v4-browser-window-btn" type="button">UUID v4</button>
@@ -24,19 +25,20 @@
       <button class="btn btn-lg sanduk-tool-btn" id="open-uuid-v5-browser-window-btn" type="button">UUID v5</button>
     </div>
   </div>
+
+  <!-- Base64 Encoder Decoder -->
+  <div class="row">
+    <div class="col-12 p-5">
+      <button class="btn btn-lg sanduk-tool-btn" id="open-base64-encoder-decoder-browser-window-btn" type="button">Base64 Encoder Decoder</button>
+    </div>
+  </div>
+
+  <!--/ JWT Decoder -->
   <div class="row">
     <div class="col-12 p-5">
       <button class="btn btn-lg sanduk-tool-btn" id="open-jwt-decoder-browser-window-btn" type="button">JSON Web Token
         Decoder
       </button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-6 p-5">
-      <button class="btn btn-lg sanduk-tool-btn" id="open-base64-encode-browser-window-btn" type="button">Base64 Encode</button>
-    </div>
-    <div class="col-6 p-5">
-      <button class="btn btn-lg sanduk-tool-btn" id="open-base64-decode-browser-window-btn" type="button">Base64 Decode</button>
     </div>
   </div>
 </div>
