--- a/src/static/uuid-v5.html
+++ b/src/static/uuid-v5.html
@@ -19,10 +19,14 @@
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-20">
+<div class="container p-10">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h4 class="">UUID v5</h4>
+    </div>
+  </div>
   <div class="row">
     <div class="col-12">
-      <h4>UUID v5</h4>
       <div class="form-group">
         <label for="uuid-v5-name">String</label>
         <input class="form-control" id="uuid-v5-name">
@@ -38,6 +42,7 @@
       </div>
       <button id="generate-uuid-v5-btn" class="btn btn-default sanduk-tool-btn">Generate</button>
       <button id="copy-uuid-v5-btn" class="btn btn-light sanduk-tool-btn">Copy</button>
+      <button id="clear-uuid-v5-btn" class="btn btn-light sanduk-tool-btn float-right">Clear</button>
     </div>
   </div>
 </div>
