--- a/src/static/json-formatter.html
+++ b/src/static/json-formatter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sanduk - UUID v4</title>
+  <title>Sanduk - JSON Formatter</title>
   <link rel="stylesheet" href="css/halfmoon.min.css">
   <style>
       body {
@@ -12,27 +12,23 @@
       .sanduk-tool-btn:hover {
           cursor: default;
       }
-
-      #uuid-v4-output {
-          -webkit-user-select: text;
-      }
   </style>
 </head>
 <body class="dark-mode">
 <div class="container p-10">
   <div class="row">
-    <div class="col-12 text-center">
-      <h4 class="">UUID v4</h4>
-    </div>
+    <div class="col-6"></div>
+    <div class="col-6"></div>
   </div>
   <div class="row">
     <div class="col-12">
+      <h4>JSON Formatter</h4>
       <pre class="my-5 border d-block text-center font-size-20" id="uuid-v4-output">&nbsp;</pre>
       <button id="generate-uuid-v4-btn" class="btn btn-default sanduk-tool-btn">Generate</button>
       <button id="copy-uuid-v4-btn" class="btn btn-light sanduk-tool-btn">Copy</button>
     </div>
   </div>
 </div>
-<script src="../renderer-process/uuid-v4.js"></script>
+<script src="../renderer-process/json-formatter.js"></script>
 </body>
 </html>
