--- a/src/static/main.html
+++ b/src/static/main.html
@@ -33,12 +33,19 @@
     </div>
   </div>
 
-  <!--/ JWT Decoder -->
+  <!-- JWT Decoder -->
   <div class="row">
     <div class="col-12 p-5">
       <button class="btn btn-lg sanduk-tool-btn" id="open-jwt-decoder-browser-window-btn" type="button">JSON Web Token
         Decoder
       </button>
+    </div>
+  </div>
+
+  <!-- Epoch -->
+  <div class="row">
+    <div class="col-6 p-5">
+      <button class="btn btn-lg sanduk-tool-btn" id="open-epoch-browser-window-btn" type="button">Epoch</button>
     </div>
   </div>
 </div>
