--- a/src/static/epoch.html
+++ b/src/static/epoch.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-10">
+<div class="container-fluid p-10">
   <div class="row">
     <div class="col-12 text-center">
       <h4 class="">Epoch</h4>
