--- a/src/static/json-formatter.html
+++ b/src/static/json-formatter.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-10">
+<div class="container-fluid p-10">
   <div class="row">
     <div class="col-12 text-center">
       <h4 class="">JSON Formatter</h4>
