--- a/src/static/jwt-decoder.html
+++ b/src/static/jwt-decoder.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-10">
+<div class="container-fluid p-10">
   <div class="row">
     <div class="col-12 text-center">
       <h4>JSON Web Token Decoder</h4>
