--- a/src/static/main.html
+++ b/src/static/main.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-10">
+<div class="container-fluid p-10">
   <!-- UUID -->
   <div class="row">
     <div class="col-6 p-5">
