--- a/src/static/uuid-v5.html
+++ b/src/static/uuid-v5.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body class="dark-mode">
-<div class="container p-10">
+<div class="container-fluid p-10">
   <div class="row">
     <div class="col-12 text-center">
       <h4 class="">UUID v5</h4>
