made buttons as rounded, used primary, secondary btns

--- a/src/static/base64-encoder-decoder.html
+++ b/src/static/base64-encoder-decoder.html
@@ -34,15 +34,15 @@
       </div>
       <div id="plain-text-message"></div>
 
-      <button id="encode-btn" class="btn btn-default sanduk-tool-btn mb-10">Encode</button>
+      <button id="encode-btn" class="btn btn-rounded btn-primary sanduk-tool-btn mb-10">Encode</button>
 
       <div class="form-group">
         <label for="base64-encoded-output">Base64 Encoded</label>
         <textarea class="form-control sanduk-jwt-container" id="base64-encoded-output"></textarea>
       </div>
 
-      <button id="copy-encoded-btn" class="btn btn-default sanduk-tool-btn">Copy Encoded</button>
-      <button id="clear-encoded-btn" class="btn btn-default sanduk-tool-btn">Clear</button>
+      <button id="copy-encoded-btn" class="btn btn-rounded btn-secondary sanduk-tool-btn">Copy</button>
+      <button id="clear-encoded-btn" class="btn btn-rounded btn-default sanduk-tool-btn float-right">Clear</button>
     </div>
 
     <div id="base64-decoder-container" class="col-6 p-5">
@@ -53,15 +53,15 @@
       </div>
       <div id="base64-encode-message"></div>
 
-      <button id="decode-btn" class="btn btn-default sanduk-tool-btn mb-10">Decode</button>
+      <button id="decode-btn" class="btn btn-rounded btn-primary sanduk-tool-btn mb-10">Decode</button>
 
       <div class="form-group">
         <label for="plain-text-output">Plain Text</label>
         <textarea class="form-control sanduk-jwt-container" id="plain-text-output"></textarea>
       </div>
 
-      <button id="copy-decoded-btn" class="btn btn-default sanduk-tool-btn">Copy Decoded</button>
-      <button id="clear-decoded-btn" class="btn btn-default sanduk-tool-btn">Clear</button>
+      <button id="copy-decoded-btn" class="btn btn-rounded btn-secondary sanduk-tool-btn">Copy</button>
+      <button id="clear-decoded-btn" class="btn btn-rounded btn-default sanduk-tool-btn float-right">Clear</button>
     </div>
   </div>
 </div>
