--- a/src/static/json-formatter.html
+++ b/src/static/json-formatter.html
@@ -25,14 +25,14 @@
         <pre class="form-control" id="json-input" style="height: 70vh; font-size: 120%"></pre>
       </div>
       <div id="json-input-message"></div>
-      <button type="button" class="btn btn-default float-right" id="format-btn">Format</button>
+      <button type="button" class="btn btn-rounded btn-primary float-right" id="format-btn">Format</button>
     </div>
     <div class="col-6 p-5">
       <div class="form-group">
         <label for="json-output">Formatted JSON</label>
         <pre class="form-control" id="json-output" style="height: 70vh; font-size: 120%"></pre>
       </div>
-      <button type="button" class="btn btn-default float-right" id="foldAll-btn">Fold</button>
+      <button type="button" class="btn btn-rounded btn-primary float-right" id="foldAll-btn">Fold</button>
     </div>
   </div>
 </div>
