--- a/src/static/jwt-decoder.html
+++ b/src/static/jwt-decoder.html
@@ -63,8 +63,8 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <button id="decode-jwt-btn" class="btn btn-default sanduk-tool-btn">Decode</button>
-      <button id="clear-jwt-btn" class="btn btn-default sanduk-tool-btn">Clear</button>
+      <button id="decode-jwt-btn" class="btn btn-rounded btn-primary sanduk-tool-btn">Decode</button>
+      <button id="clear-jwt-btn" class="btn btn-rounded btn-default sanduk-tool-btn">Clear</button>
     </div>
   </div>
 </div>
