--- a/src/static/epoch.html
+++ b/src/static/epoch.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Sanduk - Epoch</title>
   <link rel="stylesheet" href="css/halfmoon.min.css">
+  <link rel="stylesheet" href="plugin/fontawesome/css/all.min.css">
   <style>
       body {
           -webkit-user-select: none;
@@ -36,8 +37,8 @@
         <p>Time in locale</p>
         <pre class="my-5 border d-block text-center font-size-20" id="time-in-locale">&nbsp;</pre>
       </div>
-      <button id="compute-btn" class="btn btn-default sanduk-tool-btn">Compute</button>
-      <button id="clear-btn" class="btn btn-light sanduk-tool-btn float-right">Clear</button>
+      <button id="compute-btn" class="btn btn-rounded btn-primary sanduk-tool-btn">Compute</button>
+      <button id="clear-btn" class="btn btn-rounded btn-default sanduk-tool-btn float-right">Clear</button>
     </div>
   </div>
   <div class="row">
@@ -46,16 +47,19 @@
         <table class="table">
           <tbody>
           <tr>
-            <td class="text-right" style="width: 40%">Locale</td>
-            <td id="current-time-locale"></td>
+            <td style="width: 35%" class="text-right">Locale</td>
+            <td style="width: 50%" id="current-time-locale"></td>
+            <td style="width: 15%"></td>
           </tr>
           <tr>
-            <td class="text-right">UTC</td>
+            <td class="text-right">UTC/GMT</td>
             <td id="current-time-utc"></td>
+            <td></td>
           </tr>
           <tr>
             <td class="text-right">Epoch</td>
             <td id="current-time-epoch"></td>
+            <td><button id="copy-current-time-epocb-btn" type="button" class="btn float-right"><i class="fas fa-clipboard"></i></button></td>
           </tr>
           </tbody>
         </table>
