--- a/src/static/uuid-v4.html
+++ b/src/static/uuid-v4.html
@@ -27,9 +27,9 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <pre class="my-5 border d-block text-center font-size-20" id="uuid-v4-output">&nbsp;</pre>
-      <button id="generate-uuid-v4-btn" class="btn btn-default sanduk-tool-btn">Generate</button>
-      <button id="copy-uuid-v4-btn" class="btn btn-light sanduk-tool-btn">Copy</button>
+      <pre class="my-15 border d-block text-center font-size-20" id="uuid-v4-output">&nbsp;</pre>
+      <button id="generate-uuid-v4-btn" class="btn btn-rounded btn-primary sanduk-tool-btn">Generate</button>
+      <button id="copy-uuid-v4-btn" class="btn btn-rounded btn-secondary sanduk-tool-btn">Copy</button>
     </div>
   </div>
 </div>
