--- a/src/static/uuid-v5.html
+++ b/src/static/uuid-v5.html
@@ -40,9 +40,9 @@
         <p>UUID v5</p>
         <pre class="my-5 border d-block text-center font-size-20" id="uuid-v5-output">&nbsp;</pre>
       </div>
-      <button id="generate-uuid-v5-btn" class="btn btn-default sanduk-tool-btn">Generate</button>
-      <button id="copy-uuid-v5-btn" class="btn btn-light sanduk-tool-btn">Copy</button>
-      <button id="clear-uuid-v5-btn" class="btn btn-light sanduk-tool-btn float-right">Clear</button>
+      <button id="generate-uuid-v5-btn" class="btn btn-rounded btn-primary sanduk-tool-btn">Generate</button>
+      <button id="copy-uuid-v5-btn" class="btn btn-rounded btn-secondary sanduk-tool-btn">Copy</button>
+      <button id="clear-uuid-v5-btn" class="btn btn-rounded btn-default sanduk-tool-btn float-right">Clear</button>
     </div>
   </div>
 </div>
