--- a/src/static/json-formatter.html
+++ b/src/static/json-formatter.html
@@ -21,18 +21,48 @@
   <div class="row">
     <div class="col-6 p-5">
       <div class="form-group">
-        <label for="json-input">JSON Input</label>
-        <pre class="form-control" id="json-input" style="height: 70vh; font-size: 120%"></pre>
+        <label for="json-input" class="d-block mb-10">JSON Input</label>
+
+        <!-- menu -->
+        <div class="btn-group" role="group">
+          <button class="btn btn-primary"
+                  type="button"
+                  id="format-btn">Format
+          </button>
+          <button class="btn btn-primary"
+                  type="button"
+                  id="validate-input-btn">Validate
+          </button>
+          <button class="btn btn-primary"
+                  type="button"
+                  id="compact-input-btn">Compact
+          </button>
+        </div>
+
+        <!-- input editor -->
+        <pre class="form-control"
+             id="json-input"
+             style="height: 65vh; font-size: 120%"></pre>
       </div>
       <div id="json-input-message"></div>
-      <button type="button" class="btn btn-rounded btn-primary float-right" id="format-btn">Format</button>
     </div>
     <div class="col-6 p-5">
       <div class="form-group">
-        <label for="json-output">Formatted JSON</label>
-        <pre class="form-control" id="json-output" style="height: 70vh; font-size: 120%"></pre>
+        <label for="json-output" class="d-block mb-10">Formatted JSON</label>
+
+        <!-- menu -->
+        <div class="btn-group" role="group">
+          <button class="btn btn-primary"
+                  type="button"
+                  id="fold-output-btn">Fold
+          </button>
+        </div>
+
+        <!-- output editor -->
+        <pre class="form-control"
+             id="json-output"
+             style="height: 65vh; font-size: 120%"></pre>
       </div>
-      <button type="button" class="btn btn-rounded btn-primary float-right" id="foldAll-btn">Fold</button>
     </div>
   </div>
 </div>
