xml formatter added

--- a/src/static/main.html
+++ b/src/static/main.html
@@ -53,6 +53,15 @@
     </div>
   </div>
 
+  <!-- XML Formatter -->
+  <div class="row">
+    <div class="col-12 p-5">
+      <button class="btn btn-lg sanduk-tool-btn" id="open-xml-formatter-browser-window-btn" type="button">XML
+        Formatter
+      </button>
+    </div>
+  </div>
+
   <!-- Epoch -->
   <div class="row">
     <div class="col-6 p-5">
