font size changes to json formatter and xml formatter

--- a/src/static/xml-formatter.html
+++ b/src/static/xml-formatter.html
@@ -36,12 +36,23 @@
                     id="toggle-wrap-input1-btn" data-wrap="no">Wrap
             </button>
           </div>
+
+          <div class="btn-group" role="group">
+            <button class="btn btn-primary btn-rounded"
+                    type="button"
+                    id="increase-font-input1-btn">A<sup>+</sup>
+            </button>
+            <button class="btn btn-primary btn-rounded"
+                    type="button"
+                    id="decrease-font-input1-btn">A<sup>-</sup>
+            </button>
+          </div>
         </div>
 
         <!-- input editor -->
         <pre class="form-control"
              id="xml-input1"
-             style="height: 65vh; font-size: 1em; margin-bottom: 0"></pre>
+             style="height: 65vh; font-size: 16px; margin-bottom: 0"></pre>
         <div id="input1-footer" class="bg-dark p-5"></div>
       </div>
       <div id="xml-input1-message"></div>
