--- a/src/static/app.html
+++ b/src/static/app.html
@@ -27,40 +27,7 @@
   </nav>
 
   <!-- Sidebar (immediate child of the page wrapper) -->
-  <div class="sidebar">
-    <div class="sidebar-menu">
-      <a href="#" class="sidebar-link sanduk-tool"
-         data-sanduk-tool-isActive="false"
-         data-sanduk-tool-name="base64-encoder-decoder"
-         id="base64-encoder-decoder-sidebar-link">Base64 Encoder Decoder
-      </a>
-      <a href="#" class="sidebar-link sanduk-tool"
-         data-sanduk-tool-isActive="false"
-         data-sanduk-tool-name="epoch"
-         id="epoch-sidebar-link">Epoch
-      </a>
-      <a href="#" class="sidebar-link sanduk-tool"
-         data-sanduk-tool-isActive="false"
-         data-sanduk-tool-name="json-formatter"
-         id="json-formatter-sidebar-link">JSON Formatter
-      </a>
-      <a href="#" class="sidebar-link sanduk-tool"
-         data-sanduk-tool-isActive="false"
-         data-sanduk-tool-name="jwt-decoder"
-         id="jwt-decoder-sidebar-link">JWT Decoder
-      </a>
-      <a href="#" class="sidebar-link sanduk-tool"
-         data-sanduk-tool-isActive="false"
-         data-sanduk-tool-name="uuid"
-         id="uuid-sidebar-link">UUID
-      </a>
-      <a href="#" class="sidebar-link sanduk-tool"
-         data-sanduk-tool-isActive="false"
-         data-sanduk-tool-name="xml-formatter"
-         id="xml-formatter-sidebar-link">XML Formatter
-      </a>
-    </div>
-  </div>
+  <div class="sidebar" id="sidebar"></div>
 
   <!-- Content wrapper -->
   <div class="content-wrapper">
