--- a/src/static/app.html
+++ b/src/static/app.html
@@ -21,7 +21,7 @@
     </div>
     <!-- Navbar brand -->
     <div class="navbar-text ml-5">
-      <img src="../../resources/app-icons/stable/png/32.png" style="height: 20px; width: 20px;">
+      <img src="../../resources/app-icons/stable/png/32.png" style="height: 20px; width: 20px;" alt="sanduk logo">
       <span class="ml-5">sanduk</span>
     </div>
   </nav>
