--- a/src/static/app.html
+++ b/src/static/app.html
@@ -11,63 +11,13 @@
 <!-- Page wrapper with .with-navbar class -->
 <div class="page-wrapper with-navbar with-sidebar">
   <!-- Navbar (immediate child of the page wrapper) -->
-  <nav class="navbar">
-    <!-- Navbar content (with toggle sidebar button) -->
-    <div class="navbar-content">
-      <button class="btn" type="button" onclick="halfmoon.toggleSidebar()">
-        <i class="fas fa-bars" aria-hidden="true"></i>
-        <span class="sr-only">Toggle sidebar</span> <!-- sr-only = show only on screen readers -->
-      </button>
-    </div>
-    <!-- Navbar brand -->
-    <div class="navbar-text ml-5">
-      <img src="../../resources/app-icons/stable/png/32.png" style="height: 20px; width: 20px;" alt="sanduk logo">
-      <span class="ml-5">sanduk</span>
-    </div>
-  </nav>
+  <nav class="navbar" id="navbar"></nav>
 
   <!-- Sidebar (immediate child of the page wrapper) -->
   <div class="sidebar" id="sidebar"></div>
 
   <!-- Content wrapper -->
-  <div class="content-wrapper">
-    <div class="container-fluid p-10">
-      <div class="row">
-        <div class="col-12" id="main-content">
-          <div id="base64-encoder-decoder-content-wrapper"
-               data-sanduk-tool-isActive="false"
-               data-sanduk-tool-name="base64-encoder-decoder"
-               class="sandook-tool-content-wrapper d-none">base64
-          </div>
-          <div id="epoch-content-wrapper"
-               data-sanduk-tool-isActive="false"
-               data-sanduk-tool-name="epoch"
-               class="sandook-tool-content-wrapper d-none">epoch
-          </div>
-          <div id="json-formatter-content-wrapper"
-               data-sanduk-tool-isActive="false"
-               data-sanduk-tool-name="json-formatter"
-               class="sandook-tool-content-wrapper d-none">json formatter
-          </div>
-          <div id="jwt-decoder-content-wrapper"
-               data-sanduk-tool-isActive="false"
-               data-sanduk-tool-name="jwt-decoder"
-               class="sandook-tool-content-wrapper d-none">jwt decoder
-          </div>
-          <div id="uuid-content-wrapper"
-               data-sanduk-tool-isActive="false"
-               data-sanduk-tool-name="uuid"
-               class="sandook-tool-content-wrapper d-none">uuid
-          </div>
-          <div id="xml-formatter-content-wrapper"
-               data-sanduk-tool-isActive="false"
-               data-sanduk-tool-name="xml-formatter"
-               class="sandook-tool-content-wrapper d-none">xml formatter
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="content-wrapper" id="content-wrapper"></div>
 </div>
 
 <!-- Requires halfmoon.js for the dropdowns -->
