--- a/src/static/app.html
+++ b/src/static/app.html
@@ -21,7 +21,8 @@
 </div>
 
 <!-- Requires halfmoon.js for the dropdowns -->
-<script src="js/halfmoon.min.js"></script>
-<script src="../renderer-process/app.js"></script>
+<script type="text/javascript" src="js/halfmoon.min.js"></script>
+<script type="text/javascript" src="./plugin/ace/ace.js"></script>
+<script type="text/javascript" src="../renderer-process/app.js"></script>
 </body>
 </html>
