--- a/src/renderer-process/tools/xml-to-json/ui.html
+++ b/src/renderer-process/tools/xml-to-json/ui.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+<nav class="navbar navbar-expand-sm navbar-light bg-light mb-1">
   <div class="container-fluid">
     <span class="pe-3">XML to JSON</span>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#xml-to-json-formatter-navbar"
@@ -17,59 +17,19 @@
           <a class="nav-link" href="#" id="xml-to-json-transform-xml-editor-btn">Transform</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-to-json-toggle-wrap-xml-editor-btn" data-wrap="no">Wrap</a>
+          <a class="nav-link" href="#" id="increase-font-xml-to-json-btn"><i class="fas fa-search-plus"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="decrease-font-xml-to-json-btn"><i class="fas fa-search-minus"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="reset-font-xml-to-json-btn"><i class="fas fa-font"></i></a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-6">
-      <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="container-fluid">
-          <span class="pe-3">XML</span>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link py-0" href="#" id="xml-to-json-xml-editor-copy-btn">Copy</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link py-0 pe-0" href="#" id="xml-to-json-xml-editor-clear-btn">Clear</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!-- xml editor -->
-      <pre class="form-control"
-           id="xml-to-json-xml-editor"
-           style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-      <div id="xml-to-json-xml-editor-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-    </div>
-
-    <div class="col-6">
-      <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="container-fluid">
-          <span class="pe-3">JSON</span>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link py-0" href="#" id="xml-to-json-json-editor-copy-btn">Copy</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link py-0 pe-0" href="#" id="xml-to-json-json-editor-clear-btn">Clear</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!-- json editor -->
-      <pre class="form-control"
-           id="xml-to-json-json-editor"
-           style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-      <div id="xml-to-json-json-editor-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-    </div>
-
-    <div class="col-12">
-      <div id="xml-to-json-message"></div>
-    </div>
-  </div>
-</div>
+<ul class="nav nav-tabs" id="xmlToJsonTab" role="tablist"></ul>
+<div class="tab-content" id="xmlToJsonTabContent"></div>
+<div id="xml-to-json-message"></div>
