--- a/src/renderer-process/tools/uuid/ui.html
+++ b/src/renderer-process/tools/uuid/ui.html
@@ -1,9 +1,3 @@
-<style>
-    #uuid-v4-output, #uuid-v5-output {
-        font-size: 150%;
-    }
-</style>
-
 <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top mb-3">
   <div class="container-fluid">
     <span class="pe-3">UUID</span>
@@ -20,7 +14,7 @@
   <div class="row">
     <div class="col-12">
       <div class="form-group input-group-lg">
-        <label for="uuid-v4-output" class="form-label"></label>
+        <label for="uuid-v4-output" class="form-label">UUID v4</label>
         <input class="form-control text-center font-monospace" id="uuid-v4-output" readonly>
       </div>
 
@@ -29,6 +23,11 @@
         <button type="button" id="copy-uuid-v4-btn" class="btn btn-outline-primary">Copy</button>
         <button type="button" id="clear-uuid-v4-btn" class="btn btn-outline-primary">Clear</button>
       </div>
+    </div>
+
+    <div class="col-12">
+      <label for="uuid-v4-history" class="form-label">History</label>
+      <div id="uuid-v4-history" style="max-height: 250px; overflow-y: scroll;"></div>
     </div>
   </div>
 
