--- a/src/renderer-process/tools/epoch/ui.html
+++ b/src/renderer-process/tools/epoch/ui.html
@@ -49,7 +49,8 @@
             <td class="text-right">Epoch</td>
             <td id="current-time-epoch"></td>
             <td>
-              <button id="copy-current-time-epoch-btn" type="button" class="btn btn-outline-primary btn-sm">Copy
+              <button id="copy-current-time-epoch-btn" type="button" class="btn btn-outline-primary btn-sm"><i
+                class="far fa-clipboard"></i>
               </button>
             </td>
           </tr>
