base64 ui refactor

--- a/src/renderer-process/tools/base64-encoder-decoder/ui.html
+++ b/src/renderer-process/tools/base64-encoder-decoder/ui.html
@@ -1,8 +1,8 @@
 <style>
     .sanduk-textarea-container {
-        resize: vertical;
+        resize: none;
         font-size: 1em;
-        height: 25vh;
+        height: 30vh;
     }
 </style>
 
