--- a/src/renderer-process/tools/markdown/ui.html
+++ b/src/renderer-process/tools/markdown/ui.html
@@ -8,10 +8,7 @@
     <div class="collapse navbar-collapse" id="markdown-navbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#" id="generate-markdown-btn">Generate</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="auto-load-markdown-btn">Auto <i class="fas fa-toggle-off"></i></a>
+          <a class="nav-link" href="#" id="markdown-toggle-wrap-input-btn" data-wrap="no">Wrap</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" id="increase-font-input-markdown-btn"><i class="fas fa-search-plus"></i></a>
@@ -22,6 +19,15 @@
         <li class="nav-item">
           <a class="nav-link" href="#" id="reset-font-input-markdown-btn"><i class="fas fa-font"></i></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="view-editor-only-markdown-btn"><i title="Editor only" class="fas fa-edit"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="view-editor-and-preview-markdown-btn"><i title="Editor and Preview" class="fas fa-columns"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="view-preview-only-markdown-btn"><i title="Preview only" class="far fa-image"></i></a>
+        </li>
       </ul>
     </div>
   </div>
@@ -29,7 +35,11 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-6 p-0">
+    <div class="col-6 p-0"
+         id="sanduk-markdown-editor-column"
+         data-viewEditorOnly="col-12 p-0"
+         data-viewEditorAndPreview="col-6 p-0"
+         data-viewPreviewOnly="d-none">
       <!-- markdown editor -->
       <pre class="form-control"
            id="markdown-editor"
@@ -37,7 +47,11 @@
       <div id="markdown-editor-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
     </div>
 
-    <div class="col-6 p-0">
+    <div class="col-6 p-0"
+         id="sanduk-markdown-output-column"
+         data-viewEditorOnly="d-none"
+         data-viewEditorAndPreview="col-6 p-0"
+         data-viewPreviewOnly="col-12 p-0">
       <iframe id="markdown-iframe-output"
            class="github-markdown-body"
            style="border: 1px solid #eee;
