--- a/src/renderer-process/tools/base64-encoder-decoder/ui.html
+++ b/src/renderer-process/tools/base64-encoder-decoder/ui.html
@@ -1,59 +1,9 @@
-<style>
-    .sanduk-textarea-container {
-        resize: none;
-        font-size: 1em;
-        height: 30vh;
-    }
-</style>
-
-<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top mb-3">
+<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top mb-1">
   <div class="container-fluid">
     <span class="pe-3">Base64 Encoder Decoder</span>
   </div>
 </nav>
 
-<div class="container-fluid">
-  <div class="row">
-    <div id="base64-encoder-container" class="col-6">
-      <h5>Encode</h5>
-      <div class="form-group">
-        <label for="plain-text-input" class="form-label">Plain Text</label>
-        <textarea class="form-control sanduk-textarea-container" id="plain-text-input"></textarea>
-      </div>
-
-      <div id="plain-text-message"></div>
-
-      <div class="btn-group my-3" role="group" aria-label="Basic example">
-        <button type="button" id="encode-btn" class="btn btn-outline-primary">Encode</button>
-        <button type="button" id="copy-encoded-btn" class="btn btn-outline-primary">Copy</button>
-        <button type="button" id="clear-encoded-btn" class="btn btn-outline-primary">Clear</button>
-      </div>
-
-      <div class="form-group">
-        <label for="base64-encoded-output" class="form-label">Base64 Encoded</label>
-        <textarea class="form-control sanduk-textarea-container" id="base64-encoded-output"></textarea>
-      </div>
-    </div>
-
-    <div id="base64-decoder-container" class="col-6">
-      <h5>Decode</h5>
-      <div class="form-group">
-        <label for="base64-encoded-input" class="form-label">Base64 Encoded</label>
-        <textarea class="form-control sanduk-textarea-container" id="base64-encoded-input"></textarea>
-      </div>
-
-      <div id="base64-encode-message"></div>
-
-      <div class="btn-group my-3" role="group" aria-label="Basic example">
-        <button type="button" id="decode-btn" class="btn btn-outline-primary">Decode</button>
-        <button type="button" id="copy-decoded-btn" class="btn btn-outline-primary">Copy</button>
-        <button type="button" id="clear-decoded-btn" class="btn btn-outline-primary">Clear</button>
-      </div>
-
-      <div class="form-group">
-        <label for="plain-text-output" class="form-label">Plain Text</label>
-        <textarea class="form-control sanduk-textarea-container" id="plain-text-output"></textarea>
-      </div>
-    </div>
-  </div>
-</div>
+<ul class="nav nav-tabs" id="base64EncoderDecoderTab" role="tablist"></ul>
+<div class="tab-content" id="base64EncoderDecoderTabContent"></div>
+<div id="base64-encoder-decoder-message"></div>
