editor setup code, ui update, rowColumnPosition of editors set to 1:1, test

--- a/src/renderer-process/tools/markdown/ui.html
+++ b/src/renderer-process/tools/markdown/ui.html
@@ -44,7 +44,7 @@
       <pre class="form-control"
            id="markdown-editor"
            style="height: calc(100vh - 150px); font-size: 16px; margin-bottom: 0"></pre>
-      <div id="markdown-editor-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
+      <div id="markdown-editor-footer" class="bg-light p-1 font-monospace">1:1</div>
     </div>
 
     <div class="col-6 p-0"
