--- a/src/renderer-process/tools/editor/ui.html
+++ b/src/renderer-process/tools/editor/ui.html
@@ -1,6 +1,23 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top mb-1">
+<nav class="navbar navbar-expand-sm navbar-light bg-light mb-1">
   <div class="container-fluid">
     <span class="pe-3">Editor</span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#editor-navbar"
+            aria-controls="editor-navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="editor-navbar">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="increase-font-editor-btn"><i class="fas fa-search-plus"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="decrease-font-editor-btn"><i class="fas fa-search-minus"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="reset-font-editor-btn"><i class="fas fa-font"></i></a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
