ui update, xml to json mode fix

--- a/src/renderer-process/tools/epoch/ui.html
+++ b/src/renderer-process/tools/epoch/ui.html
@@ -9,7 +9,7 @@
     <div class="col-12">
       <div class="form-group input-group-lg">
         <label for="epoch-input" class="form-label">Enter epoch time</label>
-        <input class="form-control" id="epoch-input">
+        <input class="form-control" id="epoch-input" type="number" min="0" step="1">
         <div id="epoch-message"></div>
       </div>
 
