--- a/src/renderer-process/tools/uuid/ui.html
+++ b/src/renderer-process/tools/uuid/ui.html
@@ -19,7 +19,7 @@
         <div class="col-12">
           <div class="form-group input-group-lg">
             <label for="uuid-v4-output" class="form-label">Generated UUID v4</label>
-            <input class="form-control text-center font-monospace" id="uuid-v4-output" readonly>
+            <input class="form-control text-center font-monospace" spellcheck="false" id="uuid-v4-output">
           </div>
 
           <div class="btn-group my-3" role="group" aria-label="Basic example">
@@ -44,7 +44,7 @@
             <label for="uuid-v5-name" class="form-label">String</label>
             <textarea
               class="form-control"
-              style="resize: vertical"
+              style="resize: none; height: 100px"
               id="uuid-v5-name"></textarea>
           </div>
 
@@ -56,7 +56,7 @@
 
           <div class="form-group input-group-lg">
             <label for="uuid-v5-output" class="form-label">Generated UUID v5</label>
-            <input class="form-control text-center font-monospace" id="uuid-v5-output" readonly>
+            <input class="form-control text-center font-monospace" spellcheck="false" id="uuid-v5-output">
           </div>
 
           <div class="btn-group my-3" role="group" aria-label="Basic example">
