--- a/src/renderer-process/tools/jwt-decoder/ui.html
+++ b/src/renderer-process/tools/jwt-decoder/ui.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="row">
-    <div class="col-6">
+    <div class="col-md-12 col-lg-6">
       <div class="form-group">
         <label for="jwt-decoder-decoded-header" class="form-label">Header</label>
         <pre class="form-control"
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="col-6">
+    <div class="col-md-12 col-lg-6">
       <div class="form-group">
         <label for="jwt-decoder-decoded-payload" class="form-label">Payload</label>
         <pre class="form-control"
