ui update - using bootstrap icons and removed fontawesome icons

--- a/src/renderer-process/tools/epoch/ui.html
+++ b/src/renderer-process/tools/epoch/ui.html
@@ -49,9 +49,9 @@
             <td class="text-right">Epoch</td>
             <td id="current-time-epoch"></td>
             <td>
-              <button id="copy-current-time-epoch-btn" type="button" class="btn btn-outline-primary btn-sm"><i
-                class="far fa-clipboard"></i>
-              </button>
+              <span id="copy-current-time-epoch-btn" style="cursor: pointer;">
+                <i title="Copy" class="bi-clipboard"></i>
+              </span>
             </td>
           </tr>
           </tbody>
