--- a/src/renderer-process/tools/xml-formatter/ui.html
+++ b/src/renderer-process/tools/xml-formatter/ui.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="xml-formatter-navbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-formatter-format-input-btn">Pretty</a>
+          <a class="nav-link" href="#" id="xml-formatter-format-input-btn"><i title="Pretty" class="bi-emoji-smile"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-formatter-compact-input-btn">Compact</a>
+          <a class="nav-link" href="#" id="xml-formatter-compact-input-btn"><i title="Compact" class="bi-justify-left"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-formatter-toggle-wrap-input-btn" data-wrap="no">Wrap</a>
+          <a class="nav-link" href="#" id="xml-formatter-toggle-wrap-input-btn" data-wrap="no"><i title="Wrap" class="bi-body-text"></i></a>
         </li>
       </ul>
     </div>
