--- a/src/renderer-process/tools/xml-to-json/ui.html
+++ b/src/renderer-process/tools/xml-to-json/ui.html
@@ -8,22 +8,13 @@
     <div class="collapse navbar-collapse" id="xml-to-json-formatter-navbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-to-json-format-xml-editor-btn">Pretty</a>
+          <a class="nav-link" href="#" id="increase-font-xml-to-json-btn"><i title="Increase font size" class="bi-zoom-in"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-to-json-compact-xml-editor-btn">Compact</a>
+          <a class="nav-link" href="#" id="decrease-font-xml-to-json-btn"><i title="Decrease font size" class="bi-zoom-out"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-to-json-transform-xml-editor-btn">Transform</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="increase-font-xml-to-json-btn"><i class="fas fa-search-plus"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="decrease-font-xml-to-json-btn"><i class="fas fa-search-minus"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="reset-font-xml-to-json-btn"><i class="fas fa-font"></i></a>
+          <a class="nav-link" href="#" id="reset-font-xml-to-json-btn"><i title="Reset font size" class="bi-arrow-counterclockwise"></i></a>
         </li>
       </ul>
     </div>
