--- a/src/renderer-process/tools/editor/ui.html
+++ b/src/renderer-process/tools/editor/ui.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="editor-navbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#" id="increase-font-editor-btn"><i class="fas fa-search-plus"></i></a>
+          <a class="nav-link" href="#" id="increase-font-editor-btn"><i title="Increase font size" class="bi-zoom-in"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="decrease-font-editor-btn"><i class="fas fa-search-minus"></i></a>
+          <a class="nav-link" href="#" id="decrease-font-editor-btn"><i title="Decrease font size" class="bi-zoom-out"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="reset-font-editor-btn"><i class="fas fa-font"></i></a>
+          <a class="nav-link" href="#" id="reset-font-editor-btn"><i title="Reset font size" class="bi-arrow-counterclockwise"></i></a>
         </li>
       </ul>
     </div>
