--- a/src/renderer-process/tools/markdown/ui.html
+++ b/src/renderer-process/tools/markdown/ui.html
@@ -8,25 +8,25 @@
     <div class="collapse navbar-collapse" id="markdown-navbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#" id="markdown-toggle-wrap-input-btn" data-wrap="no">Wrap</a>
+          <a class="nav-link" href="#" id="markdown-toggle-wrap-input-btn" data-wrap="no"><i title="Wrap" class="bi-body-text"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="increase-font-input-markdown-btn"><i class="fas fa-search-plus"></i></a>
+          <a class="nav-link" href="#" id="increase-font-input-markdown-btn"><i title="Increase font size" class="bi-zoom-in"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="decrease-font-input-markdown-btn"><i class="fas fa-search-minus"></i></a>
+          <a class="nav-link" href="#" id="decrease-font-input-markdown-btn"><i title="Decrease font size" class="bi-zoom-out"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="reset-font-input-markdown-btn"><i class="fas fa-font"></i></a>
+          <a class="nav-link" href="#" id="reset-font-input-markdown-btn"><i title="Reset font size" class="bi-arrow-counterclockwise"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="view-editor-only-markdown-btn"><i title="Editor only" class="fas fa-edit"></i></a>
+          <a class="nav-link" href="#" id="view-editor-only-markdown-btn"><i title="Editor only" class="bi-pencil-square"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" id="view-editor-and-preview-markdown-btn"><i title="Editor and Preview" class="bi-layout-split"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="view-preview-only-markdown-btn"><i title="Preview only" class="far fa-image"></i></a>
+          <a class="nav-link" href="#" id="view-preview-only-markdown-btn"><i title="Preview only" class="bi-image"></i></a>
         </li>
       </ul>
     </div>
